# knesset_refactor

./: .dockerignore  .editorconfig  .env.codex  .env.example  .gitattributes  .gitignore  AGENTS.md  AI_NOTICE.md  AI_SETUP.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  Antidemocratic.Legislation.Codebook_02.docx  BEFORE_AFTER_COMPARISON.md  BILL_INITIATORS_README.md  BILL_TIMELINE_ENHANCEMENT.md  BUG_REPORT_AND_FIX.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  CODEX_CONFIG.md  CONTRIBUTING.md  DEBUG_REPORT_ENDLESS_RERUNS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_OPTIONS.md  Dockerfile  FACTION_COLLABORATION_IMPROVEMENTS.md  FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LICENSE  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_QUICK_REFERENCE.md  QUERY_LIMIT_FIX_SUMMARY.md  README.md  REFACTORING_GUIDE.md  REFACTORING_MIGRATION.md  RESEARCHER_GUIDE.md  SECURITY.md  all_agendas.csv  all_bills.csv  (+54 more)
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.streamlit/: config.toml  secrets.toml.example
data/: faction_coalition_status.csv  faction_coalition_status_all_knessets.csv
docs/: Antidemocratic.Legislation.Codebook.docx  CAP_ANNOTATION_GUIDE.md  DATA_PROVENANCE.md  FULL_DATASET_DOWNLOAD.md  QUERY_EXPORTS.md  README.md  STREAMLIT_QA_CHECKLIST.md  classification_process.md  query_optimization.md  recurring_bills_classified_output_process.md
legacy_backup/: plot_generators.py
pytest-of-amir/: pytest-current
scripts/: agent-setup.sh  check_snapshot_regression.py  classify_recurring_bills.py  diagnose_db.py  diff_our_scan_vs_tal.py  download_from_gcs.py  export_all_bills_classified.py  export_amnon_classified_excel.py  export_amnon_from_our_scan.py  export_amnon_missing_bills.py  export_parliamentary_queries_sendable.py  export_uncoded_committee_gov_bills.py  export_uncoded_private_bills.py  get_knesset_factions.py  import_coalition_data.py  import_filtered_coding.py  import_government_bills.py  import_research_coding.py  minimal-setup.sh  refresh_all.sh  scan_all_bills.py  setup-env.sh  upload_to_gcs.py
src/: cli.py  requests.py
tests/: README_CLOUD_TESTS.md  conftest.py  test_api_integration.py  test_cap_integration.py  test_cap_renderers.py  test_cap_services.py  test_chart_builder_ui.py  test_chart_refactor_completion.py  test_circuit_breaker.py  test_cli.py  test_cloud_compatibility.py  test_cloud_constraints.py  test_cloud_integration.py  test_config.py  test_connection_leaks.py  test_data_pipeline_integration.py  test_data_refresh.py  test_data_services.py  test_data_validation.py  test_database_repositories.py  test_e2e.py  (+23 more)
(+269 files in other folders)
